--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "@mantine/next": "^6.0.10",
     "@mui/icons-material": "latest",
     "@mui/material": "latest",
+    "@react-spring/web": "^9.7.2",
     "@tabler/icons-react": "^2.17.0",
     "@types/node": "18.15.11",
     "@types/react": "18.0.35",
@@ -33,6 +34,11 @@
     "react-hook-form": "^7.43.9",
     "tailwindcss": "3.3.1",
     "typescript": "5.0.4",
-    "yup": "^1.1.1"
+    "uuid": "^9.0.0",
+    "yup": "^1.1.1",
+    "zustand": "^4.3.8"
+  },
+  "devDependencies": {
+    "@types/uuid": "^9.0.1"
   }
 }
