--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "autoprefixer": "10.4.14",
     "eslint": "8.38.0",
     "eslint-config-next": "13.3.0",
+    "lodash": "^4.17.21",
     "next": "13.3.0",
     "postcss": "8.4.21",
     "react": "18.2.0",
@@ -39,6 +40,7 @@
     "zustand": "^4.3.8"
   },
   "devDependencies": {
+    "@types/lodash": "^4.14.194",
     "@types/uuid": "^9.0.1"
   }
 }
